feat: enable virtual threads, convert the notification dispatch executor
spring.threads.virtual.enabled=true covers Tomcat's request-handling executor and
Spring's default @Async executor. The app's own manually-created thread pools
needed individual review -- that setting alone doesn't touch them, and a
virtual-thread-per-task executor has no admission-control equivalent to a bounded
ThreadPoolExecutor's queue + rejection policy.

Converted: NotificationService's notification-dispatch executor. Confirmed safe
first -- dispatched notifications (a Discord webhook POST, an SMTP send) are
independent and order-insensitive, so losing the old single-thread executor's
incidental serialization is a pure win: a burst of notifications now proceeds
concurrently instead of queuing behind whichever one is blocked on a slow network
call.

Deliberately NOT converted: AsyncFileMergeService's merge-task pool. It's bounded
(max 20) with a CallerRunsPolicy -- once the pool and its queue are full,
submitting Tomcat threads do the merge work themselves, throttling the client
instead of admitting unbounded concurrent merges. That's real backpressure with
no virtual-thread equivalent (unbounded thread creation, no queue, no rejection
policy); swapping it would silently remove the mechanism rather than just make it
cheaper. This is a deviation from the original plan, which didn't fully account
for this before implementation surfaced it.

Also fixed a genuine pinning hazard independent of virtual threads:
AsyncFileMergeService.enqueueChunk() was doing a blocking file delete
(chunkFile.delete()) inside synchronized (receivedChunks) -- moved the delete
after the lock is released, using Set.add()'s return value for an atomic
check-and-mark instead of separate contains()+add() calls.